progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/err.txt
progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/prog.cpp:5:14: warning: missing terminating " character [enabled by default]
      cout << ";
              ^
progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/prog.cpp:5:6: error: missing terminating " character
      cout << ";
      ^
progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/prog.cpp: In function ‘int main()’:
progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/prog.cpp:6:6: error: expected primary-expression before ‘return’
      return 0;
      ^
progs/cpp/074ada7c-781e-46dd-9330-810ff1261bb1/prog.cpp:6:6: error: expected ‘;’ before ‘return’
